Fix social links being hidden by ad blockers

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -2,7 +2,7 @@ body:not(.home) footer {
 	margin-top: $spacing-rel-medium;
 }
 
-.social-links {
+.footer-links {
 	text-align: center;
 
 	// Imitate link for email (has no href)
